# Tetris

./: CMakeLists.txt  README.md  libs.hpp  main.cpp
SFML-2.6.0/include/SFML/Graphics/: Shader.hpp  Texture.hpp
SFML-2.6.0/include/SFML/System/: InputStream.hpp
menu/: menu.cpp  menu.hpp
settings/: settings.hpp
src/menu/: menu.hpp
src/settings/: settings.hpp
src/widgets/: widgets.hpp
widgets/: widgets.cpp  widgets.hpp
